<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_900"
    tools:context=".activity.start.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/sign_logo_create_account"
            android:textAllCaps="false"
            android:textColor="@color/text_900"
            android:textSize="26sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto"
            android:text="@string/sign_please_fill_the_input_below_here"
            android:textAllCaps="false"
            android:textColor="@color/text_600"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/sign_enter_email"
                android:textColorHint="@color/text_600"
                app:boxStrokeColor="@color/secondary_900"
                app:boxStrokeWidth="0.5dp"
                app:boxStrokeWidthFocused="1dp"
                app:endIconTint="@color/text_900"
                app:hintTextColor="@color/text_900">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/su_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/text_900" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_enter_password"
                android:textColorHint="@color/text_600"
                app:boxStrokeColor="@color/secondary_900"
                app:boxStrokeWidth="0.5dp"
                app:boxStrokeWidthFocused="1dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/text_900"
                app:hintTextColor="@color/text_900">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/su_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto"
                    android:inputType="textPassword"
                    android:textColor="@color/text_900" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_enter_confirm_password"
                android:textColorHint="@color/text_600"
                app:boxStrokeColor="@color/secondary_900"
                app:boxStrokeWidth="0.5dp"
                app:boxStrokeWidthFocused="1dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/text_900"
                app:hintTextColor="@color/text_900">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/su_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto"
                    android:inputType="textPassword"
                    android:textColor="@color/text_900" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <CheckBox
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:buttonTint="@color/text_900"
                    android:text="@string/sign_remember_me"
                    android:textColor="@color/text_900"
                    tools:targetApi="lollipop" />

            </RelativeLayout>

            <Button
                android:id="@+id/su_btn_signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_btn_solid"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/sign_txt_sign_up"
                android:textColor="@color/button_txt_color" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <Button
                android:id="@+id/su_btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/transparent"
                android:text="@string/sign_already_have_an_account"
                android:textAllCaps="false"
                android:textColor="@color/text_600" />

            <TextView
                android:id="@+id/su_txt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/login_txt_login"
                android:textColor="@color/secondary_900"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>