<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_900"
    tools:context=".activity.start.SetupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/setup"
            android:textAllCaps="false"
            android:textColor="@color/text_900"
            android:textSize="26sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto"
            android:text="Please tell somthing about you"
            android:textAllCaps="false"
            android:textColor="@color/text_600"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_select_profile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                app:civ_border_color="@color/text_900"
                app:civ_border_width="2dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/sign_full_name"
                android:textColorHint="@color/text_600"
                app:boxStrokeColor="@color/secondary_900"
                app:boxStrokeWidth="0.5dp"
                app:boxStrokeWidthFocused="1dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/text_900"
                app:hintTextColor="@color/text_900">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto"
                    android:inputType="text"
                    android:textColor="@color/text_900" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/sign_username"
                android:textColorHint="@color/text_600"
                app:boxStrokeColor="@color/secondary_900"
                app:boxStrokeWidth="0.5dp"
                app:boxStrokeWidthFocused="1dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/text_900"
                app:hintTextColor="@color/text_900">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto"
                    android:inputType="text"
                    android:textColor="@color/text_900" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_btn_solid"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/create"
                android:textAllCaps="false"
                android:textColor="@color/button_txt_color" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>